// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/ConnectedSidebar correctly expand users menu 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "children": undefined,
            "icon": undefined,
            "key": "users",
            "label": <LinkTitle />,
          },
          Object {
            "children": undefined,
            "icon": undefined,
            "key": "user-groups",
            "label": <LinkTitle />,
          },
          Object {
            "children": undefined,
            "icon": undefined,
            "key": "user-roles",
            "label": <LinkTitle />,
          },
        ],
        "icon": undefined,
        "key": "user-management",
        "label": "User Management",
      },
      Object {
        "children": Array [
          Object {
            "children": undefined,
            "icon": undefined,
            "key": "location-unit",
            "label": <LinkTitle />,
          },
          Object {
            "children": undefined,
            "icon": undefined,
            "key": "all-locations",
            "label": <LinkTitle />,
          },
        ],
        "icon": undefined,
        "key": "location-management",
        "label": "Location Management",
      },
      Object {
        "children": Array [
          Object {
            "children": undefined,
            "icon": undefined,
            "key": "TEAMS",
            "label": <LinkTitle />,
          },
          Object {
            "children": undefined,
            "icon": undefined,
            "key": "team-assignment",
            "label": <LinkTitle />,
          },
        ],
        "icon": undefined,
        "key": "team-management",
        "label": "Team Management",
      },
      Object {
        "children": undefined,
        "icon": undefined,
        "key": "fhir-quest",
        "label": <LinkTitle />,
      },
    ],
    "icon": <ForwardRef(DashboardOutlined) />,
    "key": "admin",
    "label": "Administration",
  },
]
`;

exports[`components/ConnectedSidebar displays menu links for All Enabled modules 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "children": undefined,
            "icon": undefined,
            "key": "users",
            "label": <LinkTitle />,
          },
          Object {
            "children": undefined,
            "icon": undefined,
            "key": "user-groups",
            "label": <LinkTitle />,
          },
          Object {
            "children": undefined,
            "icon": undefined,
            "key": "user-roles",
            "label": <LinkTitle />,
          },
        ],
        "icon": undefined,
        "key": "user-management",
        "label": "User Management",
      },
      Object {
        "children": Array [
          Object {
            "children": undefined,
            "icon": undefined,
            "key": "location-unit",
            "label": <LinkTitle />,
          },
          Object {
            "children": undefined,
            "icon": undefined,
            "key": "all-locations",
            "label": <LinkTitle />,
          },
        ],
        "icon": undefined,
        "key": "location-management",
        "label": "Location Management",
      },
      Object {
        "children": Array [
          Object {
            "children": undefined,
            "icon": undefined,
            "key": "TEAMS",
            "label": <LinkTitle />,
          },
          Object {
            "children": undefined,
            "icon": undefined,
            "key": "team-assignment",
            "label": <LinkTitle />,
          },
        ],
        "icon": undefined,
        "key": "team-management",
        "label": "Team Management",
      },
      Object {
        "children": undefined,
        "icon": undefined,
        "key": "fhir-quest",
        "label": <LinkTitle />,
      },
    ],
    "icon": <ForwardRef(DashboardOutlined) />,
    "key": "admin",
    "label": "Administration",
  },
]
`;

exports[`components/ConnectedSidebar renders the ConnectedSidebar component 1`] = `
Object {
  "children": Array [
    <div
      className="ant-layout-sider-children"
    >
      <div
        className="logo main-logo"
      >
        <Link
          id="main-logo"
          to="/"
        >
          <img
            alt="The logo"
            src="https://github.com/OpenSRP/web/raw/master/app/src/assets/images/opensrp-logo-color.png"
          />
        </Link>
        <Button
          hidden={true}
          id="collapsed-logo"
          onClick={[Function]}
          type="link"
        >
          <img
            alt="The logo"
            src="https://github.com/OpenSRP/web/raw/main/app/src/assets/images/opensrp2-logo-small.png"
          />
        </Button>
        <Button
          className="collapse-icon"
          onClick={[Function]}
          type="link"
        >
          <ForwardRef(LeftOutlined) />
        </Button>
      </div>
      <Menu
        className="menu-dark"
        defaultOpenKeys={Array []}
        defaultSelectedKeys={
          Array [
            "",
          ]
        }
        items={
          Array [
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    Object {
                      "children": undefined,
                      "icon": undefined,
                      "key": "users",
                      "label": <LinkTitle />,
                    },
                    Object {
                      "children": undefined,
                      "icon": undefined,
                      "key": "user-groups",
                      "label": <LinkTitle />,
                    },
                    Object {
                      "children": undefined,
                      "icon": undefined,
                      "key": "user-roles",
                      "label": <LinkTitle />,
                    },
                  ],
                  "icon": undefined,
                  "key": "user-management",
                  "label": "User Management",
                },
                Object {
                  "children": Array [
                    Object {
                      "children": undefined,
                      "icon": undefined,
                      "key": "location-unit",
                      "label": <LinkTitle />,
                    },
                    Object {
                      "children": undefined,
                      "icon": undefined,
                      "key": "all-locations",
                      "label": <LinkTitle />,
                    },
                  ],
                  "icon": undefined,
                  "key": "location-management",
                  "label": "Location Management",
                },
                Object {
                  "children": Array [
                    Object {
                      "children": undefined,
                      "icon": undefined,
                      "key": "TEAMS",
                      "label": <LinkTitle />,
                    },
                  ],
                  "icon": undefined,
                  "key": "team-management",
                  "label": "Team Management",
                },
                Object {
                  "children": undefined,
                  "icon": undefined,
                  "key": "fhir-quest",
                  "label": <LinkTitle />,
                },
              ],
              "icon": <ForwardRef(DashboardOutlined) />,
              "key": "admin",
              "label": "Administration",
            },
          ]
        }
        mode="inline"
        onOpenChange={[Function]}
        openKeys={Array []}
        selectedKeys={
          Array [
            "",
          ]
        }
        theme="dark"
      />
    </div>,
    null,
  ],
  "className": "ant-layout-sider ant-layout-sider-dark layout-sider",
  "style": Object {
    "flex": "0 0 275px",
    "maxWidth": "275px",
    "minWidth": "275px",
    "width": "275px",
  },
}
`;

exports[`components/ConnectedSidebar renders user managment menu for users with appropriate role 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "children": Array [
          Object {
            "children": undefined,
            "icon": undefined,
            "key": "users",
            "label": <LinkTitle />,
          },
          Object {
            "children": undefined,
            "icon": undefined,
            "key": "user-groups",
            "label": <LinkTitle />,
          },
          Object {
            "children": undefined,
            "icon": undefined,
            "key": "user-roles",
            "label": <LinkTitle />,
          },
        ],
        "icon": undefined,
        "key": "user-management",
        "label": "User Management",
      },
      Object {
        "children": Array [
          Object {
            "children": undefined,
            "icon": undefined,
            "key": "location-unit",
            "label": <LinkTitle />,
          },
          Object {
            "children": undefined,
            "icon": undefined,
            "key": "all-locations",
            "label": <LinkTitle />,
          },
        ],
        "icon": undefined,
        "key": "location-management",
        "label": "Location Management",
      },
      Object {
        "children": Array [
          Object {
            "children": undefined,
            "icon": undefined,
            "key": "TEAMS",
            "label": <LinkTitle />,
          },
        ],
        "icon": undefined,
        "key": "team-management",
        "label": "Team Management",
      },
      Object {
        "children": undefined,
        "icon": undefined,
        "key": "fhir-quest",
        "label": <LinkTitle />,
      },
    ],
    "icon": <ForwardRef(DashboardOutlined) />,
    "key": "admin",
    "label": "Administration",
  },
]
`;
